src/objects/Opportunity_Service_Provider__c.object
<CustomObject>
    <fields>
        <fullName>Allowance_Balance__c</fullName>
        <formula>Allowance__c - Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowance Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conga_Facility_Name__c</fullName>
        <formula>Service_Provider_Facility__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga: Facility Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Primary_Contact_Name__c</fullName>
        <formula>Service_Provider_Facility__r.Primary_Contact__r.FirstName &amp;&quot; &quot;&amp; Service_Provider_Facility__r.Primary_Contact__r.LastName</formula>
        <label>DS Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Opportunity Service Providers</relationshipLabel>
        <relationshipName>Opportunity_Service_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docusign_Parameters__c</fullName>
        <description>Custom parameters sent to docusign via conga to specify additional settings for the envelope email.</description>
        <formula>&quot;&amp;DocuSignR1EmailSubject=&quot;&amp;DS_Primary_Contact_Name__c&amp;&quot;+Treatment+Loan+Schedule+Documents&amp;DocuSignR1EmailBlurb=&quot;&amp;DS_Primary_Contact_Name__c&amp;&quot;,%0A%0AAttached+is+your+Easy+Legal+Finance+Irrevocable+Direction+document.+%0A%0APlease+review+the+attached+document+and+sign+electronically,+where+specified.+%0A%0AShould+you+have+any+questions+or+concerns,+please+do+not+hesitate+to+contact+us.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign Parameters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Address__c</fullName>
        <formula>Service_Provider_Facility__r.BillingStreet &amp; &quot;, &quot; &amp;
Service_Provider_Facility__r.BillingCity &amp; &quot;, &quot; &amp;
Service_Provider_Facility__r.BillingState &amp; &quot;, &quot; &amp;
Service_Provider_Facility__r.BillingState &amp; &quot;, &quot; &amp;
Service_Provider_Facility__r.BillingCountry</formula>
        <label>Facility Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Schedule_PDF__c</fullName>
        <formula>IF(
ISPICKVAL(Opportunity__r.Type_of_Loan__c,&quot;Treatment Loan&quot;)
, HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateId=&quot;&amp;IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c,&quot;ELFI&quot;),&quot;a0x0L00000NthIU&quot;,&quot;a0x8A000000XfT6&quot;)&amp;&quot;&amp;DS7=3&amp;DefaultPDF=1&amp;SC0=1&quot;,&quot;Schedule(PDF)&quot;,&quot;_blank&quot;)
, IF(
ISPICKVAL(Opportunity__r.Type_of_Loan__c,&quot;Treatment Loan 2&quot;)
, HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateId=&quot;&amp;IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c,&quot;ELFI&quot;),&quot;a0x0L00000ObHzx&quot;,&quot;a0x8A000000XfTB&quot;)&amp;&quot;&amp;DS7=3&amp;DefaultPDF=1&amp;SC0=1&quot;,&quot;Schedule(PDF)&quot;,&quot;_blank&quot;)
, &quot;N/A&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Schedule (PDF)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Service Providers</relationshipLabel>
        <relationshipName>Opportunity_Service_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Id__c</fullName>
        <description>Field used for docusign purposes</description>
        <formula>IF( 
ISBLANK(Service_Provider_Facility__r.Primary_Contact__c) 
, &quot;NA&quot;
, Service_Provider_Facility__r.Primary_Contact__r.Id
)</formula>
        <label>Primary Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <formula>IF(
ISBLANK(Service_Provider_Facility__r.Primary_Contact__c)
, HYPERLINK(&quot;/&quot;&amp; Service_Provider_Facility__r.Id &amp; &quot;/e?retURL=/&quot; &amp; Service_Provider_Facility__r.Id, &quot;Click Here to Add&quot;, &quot;_blank&quot;)
, HYPERLINK(&quot;/&quot;&amp; Service_Provider_Facility__r.Primary_Contact__r.Id ,Service_Provider_Facility__r.Primary_Contact__r.FirstName &amp;&quot; &quot;&amp; Service_Provider_Facility__r.Primary_Contact__r.LastName,&quot;_blank&quot;) 
)</formula>
        <label>Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Payor_Name__c</fullName>
        <description>Field used for conga purposes</description>
        <formula>IF(
ISBLANK(Opportunity__r.Primary_Contact__r.MiddleName)
, Opportunity__r.Primary_Contact__r.FirstName &amp; &quot;, &quot; &amp; Opportunity__r.Primary_Contact__r.LastName
, Opportunity__r.Primary_Contact__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Primary_Contact__r.MiddleName &amp; &quot;, &quot; &amp; Opportunity__r.Primary_Contact__r.LastName
)</formula>
        <label>Schedule Payor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Schedule__c</fullName>
        <description>Conga and Docusign instructions</description>
        <formula>IF(
ISPICKVAL(Opportunity__r.Type_of_Loan__c,&quot;Treatment Loan&quot;)
, HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateId=&quot;&amp;IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c,&quot;ELFI&quot;),&quot;a0x0L00000NthIU&quot;,&quot;a0x0L00000PVUD5&quot;)&amp;&quot;&amp;DS7=17&amp;DocuSignVisible=1&amp;DocuSignR1Id=&quot;&amp;Primary_Contact_Id__c&amp;&quot;&amp;DocuSignR1Type=Signer&amp;DocuSignR1Role=Signer+1&amp;DocuSignR1RoutingOrder=1&amp;QueryStringField=Docusign_Parameters__c&quot;,&quot;Send Schedule&quot;,&quot;_blank&quot;)
, IF(
ISPICKVAL(Opportunity__r.Type_of_Loan__c,&quot;Treatment Loan 2&quot;)
, HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateId=&quot;&amp;IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c,&quot;ELFI&quot;),&quot;a0x0L00000ObHzx&quot;,&quot;a0x0L00000PVUDA&quot;)&amp;&quot;&amp;DS7=17&amp;DocuSignVisible=1&amp;DocuSignR1Id=&quot;&amp;Primary_Contact_Id__c&amp;&quot;&amp;DocuSignR1Type=Signer&amp;DocuSignR1Role=Signer+1&amp;DocuSignR1RoutingOrder=1&amp;QueryStringField=Docusign_Parameters__c&quot;,&quot;Send Schedule&quot;,&quot;_blank&quot;)
, &quot;N/A&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Email__c</fullName>
        <formula>IF(
ISBLANK(Service_Provider_Facility__r.Primary_Contact__r.Email)
, &quot;Not available&quot;
, Service_Provider_Facility__r.Primary_Contact__r.Email
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Provider Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>General Business</value>
            </filterItems>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Treatment Provider Firm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Service Providers</relationshipLabel>
        <relationshipName>Opportunity_Service_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Phone__c</fullName>
        <formula>IF(
ISBLANK(Service_Provider_Facility__r.Phone)
, &quot;Not available&quot;
, Service_Provider_Facility__r.Phone
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Provider Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting to Send Schedule</fullName>
                    <default>true</default>
                    <label>Waiting to Send Schedule</label>
                </value>
                <value>
                    <fullName>Schedule Sent</fullName>
                </value>
                <value>
                    <fullName>Schedule Signed</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Paid_RU__c</fullName>
        <label>Total Paid</label>
        <summarizedField>Service_Provider_Drawdown__c.Amount__c</summarizedField>
        <summaryForeignKey>Service_Provider_Drawdown__c.Opportunity_Service_Provider_MD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <description>Field updated via DLRS</description>
        <label>Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Service Provider</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OSP-{00000}</displayFormat>
        <label>OSP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Service Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OSPVR_01_ServiceProviderFacility</fullName>
        <active>true</active>
        <description>The Service Provider Facility cannot be blank</description>
        <errorConditionFormula>ISBLANK(Service_Provider_Facility__c)</errorConditionFormula>
        <errorDisplayField>Service_Provider_Facility__c</errorDisplayField>
        <errorMessage>Please select a Treatment Firm. Error: OSPVR_01</errorMessage>
    </validationRules>
</CustomObject>